[gd_scene load_steps=10 format=3 uid="uid://jghk56gro5k0"]

[ext_resource type="Script" uid="uid://livmyxk2o272" path="res://Pickups/baby_lizard.gd" id="1_4dh6u"]
[ext_resource type="SpriteFrames" uid="uid://c60x38x4anu63" path="res://Sprites/littlegecko/dark_littlegeckoFrames.tres" id="2_hk0p6"]
[ext_resource type="SpriteFrames" uid="uid://burt7c5xj1vrb" path="res://Sprites/littlegecko/pink_littlegeckoFrames.tres" id="3_c4yp8"]
[ext_resource type="SpriteFrames" uid="uid://deb23hjdwqnpx" path="res://Sprites/littlegecko/elvis_littlegeckoFrames.tres" id="4_8sgmn"]
[ext_resource type="SpriteFrames" uid="uid://b5l0rd5j52uxq" path="res://Sprites/littlegecko/white_littlegeckoFrames.tres" id="5_yot6h"]
[ext_resource type="SpriteFrames" uid="uid://dim5xhkpvhtv2" path="res://Sprites/littlegecko/littlegeckobaseFrames.tres" id="6_mwnu7"]
[ext_resource type="SpriteFrames" uid="uid://c10nofp4s2p84" path="res://Sprites/littlegecko/slamander_littlegeckoFrames.tres" id="7_qg0dx"]
[ext_resource type="PackedScene" uid="uid://chgj4j4veyuq1" path="res://Scenes/OtherGameObjects/rarity_glitter_particles.tscn" id="8_c4yp8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hk0p6"]
height = 34.0

[node name="BabyLizard" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_4dh6u")
geckoFrames = Array[SpriteFrames]([ExtResource("2_hk0p6"), ExtResource("3_c4yp8"), ExtResource("4_8sgmn"), ExtResource("5_yot6h"), ExtResource("6_mwnu7"), ExtResource("7_qg0dx")])

[node name="RarityGlitterParticles" parent="." instance=ExtResource("8_c4yp8")]
modulate = Color(0.89718246, 0.0006628567, 0.8995672, 1)
emitting = false

[node name="geckoSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("6_mwnu7")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_hk0p6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
